Доделана форма добавления юзеров.

--- a/HelpForm.resx
+++ b/HelpForm.resx
@@ -119,10 +119,16 @@
   </resheader>
   <data name="label1.Text" xml:space="preserve">
     <value>Вы находитесь в приложения аппроксимации статичестких данных гиперболической функцией.
-Для ввода данных выбирите количество эксперементов и нажмите кнопку "Ввод данных".
+
+Для ввода данных нажмите кнопку "Ввод данных".
+
 Введите температуру и ширину зоны. Для расчета нажмите кнопку "Расчет".
+
 Для построние графика полученных функций нажмите кнопку "Построить график".
+
 Также вы можете сохранить и загрузить данные из меню "Файл".
+
+Некоторые опции доступны только для администратора.
 
 </value>
   </data>
