--- a/HelpForm.resx
+++ b/HelpForm.resx
@@ -122,7 +122,7 @@
 
 Для ввода данных нажмите кнопку "Ввод данных".
 
-Введите температуру и ширину зоны. Для расчета нажмите кнопку "Расчитать".
+Введите температуру и ширину зоны. Для расчета нажмите кнопку "Расчет".
 
 Для построние графика полученных функций нажмите кнопку "Построить график".
 
